app/ingress/argocd.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  # tls: { secretName: argocd-cert }
  routes:
    - match: Host(`argocd.mp281x.xyz`)
      kind: Rule
      services: [{ name: argocd-server, port: 443 }]
      middlewares: [{ name: tailscale-whitelist, namespace: traefik }]
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: argocd-cert
#   namespace: argocd
# spec:
#   secretName: argocd-cert
#   dnsNames: [argocd.mp281x.xyz]
#   issuerRef:
#     name: tailscale-cert
#     kind: ClusterIssuer
