app/ingress/homarr.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: homarr
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  tls: { secretName: homarr-cert }
  routes:
    - match: Host(`homarr.mp281x.xyz`)
      kind: Rule
      services: [{ name: homarr, port: 7575 }]
