app/ingress/ingress-app.yaml
#? Homarr
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: homarr
  namespace: app-ns
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`homarr.mp281x.xyz`)
      kind: Rule
      services: [{ name: homarr, port: 7575 }]

---
#? Vaultwarden
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: app-ns
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`vaultwarden.mp281x.xyz`)
      kind: Rule
      services: [{ name: vaultwarden, port: 80 }]

---
#? Nextcloud
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud
  namespace: app-ns
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: "Host(`nextcloud.mp281x.xyz`) && !Headers(`nc_username`, `admin`)"
      kind: Rule
      services: [{ name: nextcloud, port: 80 }]
