app/ingress/ingress-dev.yaml
#? Argocd
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd
  namespace: argocd
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`argocd.mp281x.xyz`)
      kind: Rule
      services: [{ name: argocd-server, port: 443 }]

---
#? Traefik
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`traefik.mp281x.xyz`)
      kind: Rule
      services: [{ name: api@internal, kind: TraefikService }]

---
#? Keel
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: keel
  namespace: kube-system
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: Host(`keel.mp281x.xyz`)
      kind: Rule
      services: [{ name: keel, port: 9300 }]

---
#? Nextcloud
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nextcloud-admin
  namespace: app-ns
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  routes:
    - match: "Host(`nextcloud_admin.mp281x.xyz`)"
      kind: Rule
      services: [{ name: nextcloud, port: 80 }]
