app/ingress/kasten.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: kasten
  namespace: kasten-io
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  tls: { secretName: kasten-cert }
  routes:
    - match: Host(`kasten.mp281x.xyz`)
      kind: Rule
      services: [{ name: gateway, port: 8000 }]
