app/ingress/longhorn.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn
  namespace: longhorn-system
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  # tls: { secretName: longhorn-cert }
  routes:
    - match: Host(`longhorn.mp281x.xyz`)
      kind: Rule
      services: [{ name: longhorn-frontend, port: 80 }]
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: longhorn-cert
#   namespace: longhorn-system
# spec:
#   secretName: longhorn-cert
#   dnsNames: [longhorn.mp281x.xyz]
#   issuerRef:
#     name: letsencrypt-staging
#     kind: ClusterIssuer
