app/ingress/test.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vaultwarden
  namespace: vaultwarden
  # annotations:
  #   cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: private
  rules:
    - host: vaultwarden.mp281x.xyz
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: vaultwarden
                port:
                  name: 80
# ---
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: vaultwarden
#   namespace: vaultwarden
#   annotations: { kubernetes.io/ingress.class: traefik }
# spec:
#   entryPoints: [websecure]
#   # tls: { secretName: vaultwarden-cert }
#   routes:
#     - match: Host(`vaultwarden.mp281x.xyz`)
#       kind: Rule
#       services: [{ name: vaultwarden, port: 80 }]
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: vaultwarden-cert
#   namespace: vaultwarden
# spec:
#   secretName: vaultwarden-cert
#   dnsNames: [vaultwarden.mp281x.xyz]
#   issuerRef:
#     name: tailscale-cert
#     kind: ClusterIssuer
