app/ingress/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: traefik-dashboard
  namespace: traefik
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  # tls: { secretName: traefik-cert }
  routes:
    - match: Host(`traefik.mp281x.xyz`)
      kind: Rule
      middlewares: [{ name: test-ipwhitelist, namespace: traefik }]
      services: [{ name: api@internal, kind: TraefikService }]
# ---
# apiVersion: cert-manager.io/v1
# kind: Certificate
# metadata:
#   name: traefik-cert
#   namespace: traefik
# spec:
#   secretName: traefik-cert
#   dnsNames: [traefik.mp281x.xyz]
#   issuerRef:
#     name: letsencrypt-staging
#     kind: ClusterIssuer

---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: test-ipwhitelist
  namespace: traefik
spec:
  ipWhiteList:
    sourceRange:
      - 100.64.0.0/10
      - 100.115.171.94
