app/ingress/vaultwarden.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: vaultwarden
  namespace: vaultwarden
  annotations: { kubernetes.io/ingress.class: traefik }
spec:
  entryPoints: [websecure]
  tls: { secretName: vaultwarden-cert }
  routes:
    - match: Host(`vaultwarden.mp281x.xyz`)
      kind: Rule
      services: [{ name: vaultwarden-svc, port: 80 }]
